plugins {
    id 'java'
}

allprojects {
    group = 'com.azure.simpleSDK'
    version = '1.0.0-SNAPSHOT'
    
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
    
    compileJava {
        options.encoding = 'UTF-8'
    }
    
    compileTestJava {
        options.encoding = 'UTF-8'
    }
    
    test {
        useJUnitPlatform()
    }
    
    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
        testImplementation 'org.mockito:mockito-core:5.1.1'
        testImplementation 'org.assertj:assertj-core:3.24.2'
    }
}